Fixed APOD image horizontal alignment

--- a/resources/index.css
+++ b/resources/index.css
@@ -145,7 +145,8 @@ li a:hover {
   display: block;
   max-width: 92%;
   max-height: 40%;
-  margin: 0 5px 0 0;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px;
 }
 
